suppression des fichiers inutiles

--- a/edla/main.tex
+++ b/edla/main.tex
@@ -93,7 +93,7 @@ compte la rotation de la main de l'utilisateur.
 \subsection{Evaluation des solutions envisagées}
 
 \section{Conclusion}
-\bibliographystyle{plain} % or try abbrvnat or unsrtnat or plainnat
+\bibliographystyle{ieeetr}
 \bibliography{biblio}
 
 \end{document}
