ajout des modification effectué dans overleaf

--- a/edla/intro.tex
+++ b/edla/intro.tex
@@ -1,32 +1,44 @@
 \section{Introduction}
 
-Durant nos études en master informatique nous avons l'occasion de réaliser un projet
-orienté recherche. Nous avons sélectionné le sujet \enquote{Hand Kinect}, car nous nous
-intéressons à la modélisation 3D et aux nouvelles technologie de caméra.
+Durant notre master IVI\footnote{Le master Image Vision Interaction est 
+l'un des parcours des masters informatiques de l'université de Lille 1}, 
+nous avons l'occasion de réaliser un projet orienté recherche. Nous avons 
+sélectionné le sujet \og Hand Kinect \fg, car nous nous intéressons à la 
+modélisation 3D et aux dernières techniques d'acquisition.
 
 \subsection{Présentation}
-Dans cette première partie du projet, nous allons effectuer un état de la l'art sur des solutions
-permettant de modéliser la main d'un individu et de localiser l'ensemble des articulations de celle-ci 
-à partir d'une caméra nous fournissant une image RGB et une image contenant l'information de profondeur de la scène filmé.\\
+Dans le cadre de ce projet, nous sommes amené à rédiger un état de la l'art.
+Cette première partie, nous permet de synthétiser et sélectionner les 
+solutions. Notre objectif étant de détecter la main et les articulations 
+de la main d'une personne, afin de modéliser en 3D la main de cette personne, 
+dans des plans de caméra global ou rapprocher. Cela doit être réalisable en 
+temps réel et à partir d'une caméra nous fournissant une image RGB et une 
+image contenant l'information de profondeur de la scène filmée.\\
 
-De plus en plus d'application nécessite des IHM plus précisent et plus naturelles. Pour cela, la détection
-de la main devient de plus en plus intéressant dans des simulations. Ce niveau de précision peut être
-utile dans des simulations médicales où les mains sont l'outils principales de l'utilisateur.\\
+De plus en plus d'application nécessite des IHM plus précisent et plus 
+naturelles. Pour cela, la détection de la main devient de plus en plus 
+intéressant pour les simulations. Ce niveau de précision peut être
+utile dans des simulations médicales où les mains sont l'outils principales 
+de l'utilisateur.\\ % Autres exemples?
 
 \subsection{Contexte}
-La réalisation de ce projet se fait avec l'équipe MIIRE\footnote{Multimedia, Image, Indexing and Recognition}. Cette équipe travaille sur la segmentation du corps, sur la détection et la
-reconnaissance d'expression du visage, et sur l'acquisition de données 3D.
-Le projet sur lequel nous travaillons est un projet que nous démarrons. Nous travaillons avec la caméra
-Kinect2 et l'outils Unity3D pour la modélisation et l'animation de la main.
+La réalisation de ce projet se fait avec l'équipe 3D SAM\footnote{Modeling 
+and Analysis of Static and Dynamic Shapes}. Cette équipe conçoit de 
+nouveaux outils et méthodes d'analyse des formes des objets 3D statiques 
+et dynamique. Ils travaillent sur l'analyse de formes des objects 3D et la 
+modélisation des variations des formes dans des vidéos 3D. Nous démarrons 
+ce projet proposé par l'équipe, il ne s'agit pas d'une reprise d'un projet 
+déjà entamé. Nous travaillons avec la caméra Kinect2 et l'outils Unity3D 
+pour la modélisation et l'animation de la main.
 
 \subsection{Problèmatique}
-La Kinect permet déjà de détecter un squelette contenant quinze représentant différentes articulation 
-du corps humain. 
+La Kinect permet déjà de détecter un squelette contenant quinze représentant 
+différentes articulation du corps humain. 
 %a revoir
 D'autre outils permettent de détecter les mains des utilisateurs, cependant leur
 champ de vision n'est pas assez important pour diverse application.
 
 \subsection{Objectif du projet}
-L'objectif de notre projet est d'utiliser la Kinect2 dans le but de détecter les différentes articulations
+L'objectif de notre projet est d'utiliser la Kinect 2 dans le but de détecter les différentes articulations
 de la main et de modéliser celle-ci dans une application Unity.
 %TODO ajouter les différentes étape de nos recherches 
