modif biblio style

--- a/edla/main.tex
+++ b/edla/main.tex
@@ -213,7 +213,7 @@ compte la rotation de la main de l'utilisateur.
 %% REFERENCES
 %% ==========
 
-\bibliographystyle{plainnat} % or try abbrvnat or unsrtnat or plainnat
+\bibliographystyle{ieeetr} % or try abbrvnat or unsrtnat or plainnat
 \bibliography{bibtex1}
 
 \end{document}
