biblio ne fonctionne pas

--- a/edla/biblio.bib
+++ b/edla/biblio.bib
@@ -33,3 +33,48 @@ title        = {Accurate, Robust, and Flexible Real-time Hand Tracking},
 url          = {http://research.microsoft.com/apps/pubs/default.aspx?id=238453},
 year         = {2015},
 }
+
+@article{wang2009real,
+  title={Real-time hand-tracking with a color glove},
+  author={Wang, Robert Y and Popovi{\'c}, Jovan},
+  journal={ACM Transactions on Graphics (TOG)},
+  volume={28},
+  number={3},
+  pages={63},
+  year={2009},
+  publisher={ACM}
+}
+
+@inproceedings{van2011combining,
+  title={Combining RGB and ToF cameras for real-time 3D hand gesture interaction},
+  author={Van den Bergh, Michael and Van Gool, Luc},
+  booktitle={Applications of Computer Vision (WACV), 2011 IEEE Workshop on},
+  pages={66--72},
+  year={2011},
+  organization={IEEE}
+}
+
+@Inproceedings {export:145347,
+abstract     = {<p>We propose a new method to quickly and accurately predict 3D positions of body
+                joints from a single depth image, using no temporal information. We take an
+                object recognition approach, designing an intermediate body parts representation
+                that maps the difficult pose estimation problem into a simpler per-pixel
+                classification problem. Our large and highly varied training dataset allows the
+                classifier to estimate body parts invariant to pose, body shape, clothing, etc.
+                Finally we generate confidence-scored 3D proposals of several body joints by
+                reprojecting the classification result and finding local modes.
+The system runs
+                at 200 frames per second on consumer hardware. Our evaluation shows high accuracy
+                on both synthetic and real test sets, and investigates the effect of several
+                training parameters. We achieve state of the art accuracy in our comparison with
+                related work and demonstrate improved generalization over exact whole-skeleton
+                nearest neighbor matching.</p>},
+author       = {Jamie Shotton and Andrew Fitzgibbon and Mat Cook and Toby Sharp and Mark
+                Finocchio and Richard Moore and Alex Kipman and Andrew Blake},
+booktitle    = {CVPR},
+month        = {June},
+publisher    = {IEEE},
+title        = {Real-Time Human Pose Recognition in Parts from a Single Depth Image},
+url          = {http://research.microsoft.com/apps/pubs/default.aspx?id=145347},
+year         = {2011},
+}
