construction roi ok

--- a/edla/intro.tex
+++ b/edla/intro.tex
@@ -4,5 +4,8 @@ Durant notre master IVI\footnote{Le master Image Vision Interaction est
 l'un des parcours des masters informatiques de l'université de Lille 1}, 
 nous avons l'occasion de réaliser un projet orienté recherche. Nous avons 
 sélectionné le sujet \og Hand Kinect \fg, car nous nous intéressons à la 
-modélisation 3D et aux dernières techniques d'acquisition.
+modélisation 3D et aux dernières techniques d'acquisition. Dans un premier temps,
+nous réalisons un état de l'art ainsi qu'un prévisionnel afin de déterminer 
+les solutions adéquates pour notre problème et de plannifier les tâches qui
+seront à réaliser pour la réussite du projet.
 
