--- a/edla/main.tex
+++ b/edla/main.tex
@@ -15,10 +15,13 @@
 \usepackage[T1]{fontenc}
 \usepackage[francais]{babel}
 
+%couleur
 \usepackage{color}
 \usepackage{multicol}
 
 \usepackage{setspace}
+
+%image
 \usepackage{graphicx}
 
 % code color
