--- a/edla/biblio.bib
+++ b/edla/biblio.bib
@@ -7,20 +7,18 @@ url          = {http://research.microsoft.com/apps/pubs/default.aspx?id=217428},
 year         = {2014},
 }
 
-@techreport{zhang:inria-00074899,
-  TITLE = {{Iterative point matching for registration of free-form curves}},
-  AUTHOR = {Zhang, Zhengyou},
-  URL = {https://hal.inria.fr/inria-00074899},
-  TYPE = {Research Report},
-  NUMBER = {RR-1658},
-  PAGES = {42},
-  INSTITUTION = {{INRIA}},
-  YEAR = {1992},
-  KEYWORDS = {free-form curve matching ; 3-D registration ; motion estimation ; dynamic scene analysis ; 3-D vision},
-  PDF = {https://hal.inria.fr/inria-00074899/file/RR-1658.pdf},
-  HAL_ID = {inria-00074899},
-  HAL_VERSION = {v1},
-}
+@ARTICLE{121791,
+author={Besl, P.J. and McKay, Neil D.},
+journal={Pattern Analysis and Machine Intelligence, IEEE Transactions on},
+title={A method for registration of 3-D shapes},
+year={1992},
+volume={14},
+number={2},
+pages={239-256},
+keywords={computational geometry;convergence of numerical methods;iterative methods;optimisation;pattern recognition;picture processing;3D shape registration;convergence;geometric entity;geometric model;iterative closest point;mean-square distance metric;pattern recognition;point set registration;Convergence;Inspection;Iterative algorithms;Iterative closest point algorithm;Iterative methods;Motion estimation;Quaternions;Shape measurement;Solid modeling;Testing},
+doi={10.1109/34.121791},
+ISSN={0162-8828},
+month={Feb},}
 
 @Inproceedings {export:238453,
 author       = {Toby Sharp and Cem Keskin and Duncan Robertson and Jonathan Taylor and Jamie
