ajout d'un paragraphe dans l'intro

--- a/edla/intro.tex
+++ b/edla/intro.tex
@@ -1,5 +1,11 @@
 \section{Introduction}
 
+L'homme utilise continuellement ses mains de manière naturelle. Nous 
+sommes extrêmement précis et habile avec elles. Elles nous permettent 
+de resentir de très fins détails. Au jour de l'écriture de cette état 
+de l'art, utiliser les mains pour interagir avec un ordinateur est encore 
+limité.\\
+
 Durant notre master IVI\footnote{Le master Image Vision Interaction est 
 l'un des parcours des masters informatiques de l'université de Lille 1}, 
 nous avons l'occasion de réaliser un projet orienté recherche. Nous avons 
@@ -7,5 +13,5 @@ sélectionné le sujet \og Hand Kinect \fg, car nous nous intéressons à la
 modélisation 3D et aux dernières techniques d'acquisition. Dans un premier temps,
 nous réalisons un état de l'art ainsi qu'un prévisionnel afin de déterminer 
 les solutions adéquates pour notre problème et de plannifier les tâches qui
-seront à réaliser pour la réussite du projet.
+seront à réaliser pour la réussite du projet.\\
 
