modification de l'organisation du rapport

--- a/edla/intro.tex
+++ b/edla/intro.tex
@@ -1,4 +1,4 @@
-\section{Introduction}
+\part{Introduction}
 
 L'homme utilise continuellement ses mains de manière naturelle. Nous 
 sommes extrêmement précis et habile avec elles. Elles nous permettent 
