--- a/edla/main.tex
+++ b/edla/main.tex
@@ -36,23 +36,7 @@
 \definecolor{mygray}{RGB}{100,100,100}
 
 
-%\title{État de l'art sur la détection, le suivi de la main et animation de celle-ci dans une scène 3D.}
-%
-%\author{
-%Alexis Robache \\
-%\texttt{robache.alexis@gmail.com} \\
-%\and
-%Elliot Vanegue\\
-%\texttt{elliot.vanegue@gmail.com} \\
-%\and
-%Gaëtan Deflandre\\
-%\texttt{gaetan.deflandre@gmail.com} \\
-%}
-
-
-%TODO modifier les référence pour que cela afficher des numéros -> citation beaucoup trop longue
-
-
+%TODO revoir le titre ce n'est plus juste un état de l'art
 
 \begin{document}
 
