--- a/edla/presentation.tex
+++ b/edla/presentation.tex
@@ -1,8 +1,8 @@
-\section{Présentation du projet}
+\part{Présentation du projet}
 
 %doit contenir la fonction de ce rapport : etat de l'art + previsionnel
 %dans le but de réaliser un projet
-\subsection{Présentation}
+\chapter{Présentation}
 Dans le cadre de ce projet, nous sommes amené à rédiger un état de la l'art.
 Cette première partie, nous permet de synthétiser et sélectionner les 
 solutions. Notre objectif étant de détecter la main et les articulations 
@@ -18,7 +18,7 @@ utile dans des simulations médicales où les mains sont l'outils principales
 de l'utilisateur.\\ % Autres exemples?
 
 %doit contenir l'ensemble des informations sur l'équipe -> sur quoi porte leur recherche
-\subsection{Contexte}
+\chapter{Contexte}
 La réalisation de ce projet se fait avec l'équipe 3D SAM\footnote{Modeling 
 and Analysis of Static and Dynamic Shapes}. Cette équipe conçoit de 
 nouveaux outils et méthodes d'analyse des formes des objets 3D statiques 
@@ -29,7 +29,7 @@ déjà entamé. Nous travaillons avec la caméra Kinect2 et l'outils Unity3D
 pour la modélisation et l'animation de la main.
 
 %pourquoi faire ce projet (plus de precision?) + cas concret ou on pourrait l'utiliser (ex : medecine)
-\subsection{Problèmatique}
+\chapter{Problèmatique}
 La Kinect permet déjà de détecter un squelette contenant quinze représentant 
 différentes articulation du corps humain. 
 %a revoir
@@ -37,7 +37,7 @@ D'autre outils permettent de détecter les mains des utilisateurs, cependant leu
 champ de vision n'est pas assez important pour diverse application.
 
 %comment réaliser ce projet, avec quoi + résultat attendu
-\subsection{Objectif}
+\chapter{Objectif}
 L'objectif de notre projet est d'utiliser la Kinect 2 dans le but de détecter les différentes articulations
 de la main et de modéliser celle-ci dans une application Unity.
 %TODO ajouter les différentes étape de nos recherches 
