--- a/edla/biblio.bib
+++ b/edla/biblio.bib
@@ -74,5 +74,5 @@ month        = {June},
 publisher    = {IEEE},
 title        = {Real-Time Human Pose Recognition in Parts from a Single Depth Image},
 url          = {http://research.microsoft.com/apps/pubs/default.aspx?id=145347},
-year         = {2011},
+year         = {2011}
 }
