--- a/edla/intro.tex
+++ b/edla/intro.tex
@@ -1,4 +1,4 @@
-\part{Introduction}
+\chapter{Introduction}
 
 L'homme utilise continuellement ses mains de manière naturelle. Nous 
 sommes extrêmement précis et habile avec elles. Elles nous permettent 
@@ -14,4 +14,3 @@ modélisation 3D et aux dernières techniques d'acquisition. Dans un premier tem
 nous réalisons un état de l'art ainsi qu'un prévisionnel afin de déterminer 
 les solutions adéquates pour notre problème et de plannifier les tâches qui
 seront à réaliser pour la réussite du projet.\\
-
