modification des titres

--- a/edla/main.tex
+++ b/edla/main.tex
@@ -65,14 +65,14 @@
  \begin{flushright}
   \begin{spacing}{1.6}
     \textbf{
-      {\Large État de l'art sur la détection, le suivi de la main et 
-        animation de celle-ci dans une scène 3D}
+      {\Large Présentation du projet \og Hand Kinect \fg}
     }
   \end{spacing}
   \hrule
   \vspace{0.2cm}
   \textit{
-  	{\large\textcolor{mygray}{État de l'art, projet de fin de Master IVI}}
+  	{\large\textcolor{mygray}{Présentation et état de l'art sur la détection, le suivi de la main et 
+        animation de celle-ci dans une scène 3D}}
   }
 \end{flushright}
 
