debut detection image couleur

--- a/edla/biblio.bib
+++ b/edla/biblio.bib
@@ -76,3 +76,10 @@ title        = {Real-Time Human Pose Recognition in Parts from a Single Depth Im
 url          = {http://research.microsoft.com/apps/pubs/default.aspx?id=145347},
 year         = {2011}
 }
+
+@inproceedings{viola2001jones,
+  title={Jones,“Robust real-time object detection,”},
+  author={Viola, Paul},
+  booktitle={IEEE Workshop on Statistical and Theories of Computer Vision},
+  year={2001}
+}
