--- a/edla/solution.tex
+++ b/edla/solution.tex
@@ -45,10 +45,20 @@ utilisant l'une ou l'autre de ces caméras. Nous allons dans cette partie détai
 existante.
 
 \subsection{Détection et suivi de la main à partir d'une image couleur}
-Dans la méthode de 
+La méthode proposé par S. Bilal et al \cite{} utilise l'algorithme de Viola et al \cite{viola2001jones} afin
+de détecter la main et fournir la position de celle-ci en créant une ROI\footnote{Region Of Interest} autour d'elle.\\
+%TODO viola jones -> voir pji
+
+Une fois, qu'une ROI est formé autour de la main de l'utilisateur S. Bilal et al \cite{} change d'espace colorimétrique
+afin de pouvoir différencier la main du reste de l'environnement. Pour cela, S. Bilal et al \cite{} choisissent 
+d'utiliser l'espace YCbCr qui permet d'obtenir des informations de chromaticité dont la valeur est presque équivalente
+quelque soit la couleur de peau de l'utilisateur \cite{}. Une fois que la ROI de la main est binarisé, il est possible
+de détecter le bout des doigts. Il faut tout d'abord calculer le centroide de la forme de la main, puis la distance entre
+ce centroide et chaque point du contour de la main. Cela permet d'obtenir un graphe correspondant à la Fig. \ref{}, où chaque
+pique représente un doigt.
 
 \subsection{Détection et suivi de la main avec une image de profondeur}
-Pour réaliser la détection de la main, il faut dans un premier temps déterminer une ROI\footnote{Region Of Interest}
+Pour réaliser la détection de la main, il faut dans un premier temps déterminer une ROI
 autour ce celle-ci. Cette première étape a été expliqué dans \cite{export:238453}, où les auteurs utilise un classifieur
 qui se repose sur la méthode développé dans \cite{export:145347}. Ce classifieur permet d'effectuer de la reconnaissance
 des parties du corps et permet également de détecter les articulations.
