explication viola jones ok

--- a/edla/biblio.bib
+++ b/edla/biblio.bib
@@ -77,9 +77,32 @@ url          = {http://research.microsoft.com/apps/pubs/default.aspx?id=145347},
 year         = {2011}
 }
 
+//methode RGB
+@INPROCEEDINGS{haarlike, 
+author={Bilal, S. and Akmeliawati, R. and Salami, M.J.E. and Shafie, A.A. and Bouhabba, E.M.}, 
+booktitle={Mechatronics and Automation (ICMA), 2010 International Conference on}, 
+title={A hybrid method using haar-like and skin-color algorithm for hand posture detection, recognition and tracking}, 
+year={2010}, 
+pages={934-939}, 
+keywords={Haar transforms;Kalman filters;computer vision;image colour analysis;object detection;skin;Kalman filter;chromatic color distribution;computer vision;haar-like hybrid method;hand blobs;hand posture detection;object detection;skin color algorithm;Face;Feature extraction;Fingers;Image color analysis;Kalman filters;Pixel;Skin;Kalman Filter;finger detection;haar-like feature;hand detection;skin segmentation}, 
+doi={10.1109/ICMA.2010.5588576}, 
+ISSN={2152-7431}, 
+month={Aug},}
+
 @inproceedings{viola2001jones,
   title={Jones,“Robust real-time object detection,”},
   author={Viola, Paul},
   booktitle={IEEE Workshop on Statistical and Theories of Computer Vision},
   year={2001}
+}
+
+@article{yoo1999fast,
+  title={A fast algorithm for tracking human faces based on chromatic histograms},
+  author={Yoo, Tae-Woong and Oh, Il-Seok},
+  journal={Pattern Recognition Letters},
+  volume={20},
+  number={10},
+  pages={967--978},
+  year={1999},
+  publisher={Elsevier}
 }
